--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,14 @@ description: De primera sport
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+4
+  firebase_crashlytics: ^0.1.3+3
+  shared_preferences: ^0.5.6+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
