--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_crashlytics: ^0.1.3+3
   shared_preferences: ^0.5.6+2
   intl: ^0.16.1
+  shimmer: ^1.1.2
+  event_bus: 1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
