--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shimmer: ^1.1.2
   event_bus: 1.1.1
   provider: ^4.3.2+3
+  flutter_rating_bar: ^3.2.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
